# paraceptor

./: CMakeLists.txt  README.md  ip.txt  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/paraceptor/lib/px4_offboard/: recon_drone_path
install/paraceptor/share/paraceptor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_offboard/lib/px4_offboard/: offboard_control_waypoint
install/px4_offboard/share/px4_offboard/: offboard_position_control.launch.py  package.sh
launch/: offboard_position_control.launch.py  visualize.launch.py
log/: latest_build
px4_offboard/: offboard_control.py  offboard_control_waypoint.py  recon_drone_path.py
