<?xml version="1.0"?>
<package format="3">
  <name>paraceptor</name>
  <version>0.0.0</version>
  <description>ROS2 python interface for px4</description>
  <maintainer email="jalim@ethz.ch">jaeyoung</maintainer>
  <license>BSD-3</license>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>px4_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

